# mad-cli

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  config.rs  counter.rs  downloader.rs  ffmpeg.rs  main.rs  media.rs  network.rs  utils.rs
