[package]
name = "madcli"
version = "1.0.0"
edition = "2021"

[dependencies]
bytes = "1.11.1"
futures = "0.3.32"
indicatif = "0.18.4"
once_cell = "1.19.0"
regex = "1.10.6"
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls-vendored"] }
tokio = { version = "1.39.3", features = ["full"]}
ureq = "2.10.1"
ffmpeg-next = { version = "8.0.0", default-features = false, features = ["format", "codec"] }
dialoguer = "0.12.0"

[profile.release]
strip = true
